# legacy_opengl_demo

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
data/: df3  galaxy.texture  jupiter.worp256  moon1.worp128  moon2.worp128  testremi
data/buttonfly/: m_arts  m_bounce  m_flight  m_flip  m_interactive  m_irisgl  m_objects  m_opengl  m_smooth  menu  menu_demos
data/buttonfly_linux/: m_arts  m_flight  m_flip  m_interactive  m_irisgl  m_objects  m_opengl  m_smooth  menu  menu_demos
data/cycles/: alarm.aiff  boom1.aiff  boom2.aiff  boom3.aiff  cycle.aiff  fall.aiff  jump.aiff
data/flight/: hills.grid
data/flight/ci/: COPYRIGHT  f16.d  f18.d  lights.d  mtns.d  p38.d  plate1.d  plate2.d  plate3.d  plate4.d  plate5.d  sw.d
data/flight/rgb/: b727.d  buildings.d  f14.d  f16.d  f18.d  hills.d  mtns.d  p38.d  plate3.d  plate4.d  sw.d  threat.d  wlight.d
data/flight/sound/: jthrust.aiff  lock.aiff  missle.aiff
ports/freeglut/: fix-debug-macro.patch  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  windows-output-name.patch
src/atlantis/: CMakeLists.txt  atlantis.c  atlantis.h  whale.c
src/bounce/: CMakeLists.txt  bounce.c  glui.c  trackball.c
src/buttonfly/: CMakeLists.txt  buttonfly.c  buttonfly.h  data.h  event.c  event.h  graph.h  irisgl_compat.c  irisgl_compat.h  parser.tab.c  parser.tab.h
src/cycles/: CMakeLists.txt  COPYRIGHT  Cycles.closed.fti  README  cycles.man
src/cycles/src/: main.c
src/cycles/src/cycles/: bad.c  block-hit.c  cycles.h  draw.c  init-pos.c  main.c  mcast-io.c  misc.c  objects.c  screens.c  set-speed.c  sound.c  sound.h
src/cycles/src/porting/: iris2ogl.c  iris2ogl.h  iris2ogl_missing.c  irix_audio.h  irix_windows.h
src/demos/: CMakeLists.txt  bounce.c  demo_template.c  enterprise.c  glutplane.c  mandel.c  maze.c  particles.c  plasma.c  primes.c  reflexion.c  road.c  rotate.c  scube.c  stars.c
src/distort/: CMakeLists.txt  defs.h  distort.c  ripple.c  ripple.h  ripple_table.c  rubber.c  rubber.h
src/flight/: CMakeLists.txt  Makefile  README  Xzmsg.h  aifflib.c  aifflib.h  ci_colors.h  collision.c  collision.h  color.c  colors.h  comm.c  cull.c  density.c  exp.c  flight.c  flight.h  fog.c  ftime.c  instr.c  land1.c  land2.c  light.c  light.h  main.c  mat.c  message.c  meters.c  objects.h  objext.c  proto.h  radar.c  rgb_colors.h  shadow.c  sound.c  sound.h  tex.c  udpbrdcst.c  udpbrdcst.h  uflight.c  (+2 more)
src/flight/defs/: hills.t  index.html
src/flight/defs/ci/: b747.d  c150.d  index.html  runway.d  threat.d  wlight.d
src/flight/defs/rgb/: b747.d  c150.d  index.html  lights.d  plate1.d  plate2.d  plate5.d  runway.d
src/flight/defs/sound/: cannon.aiff  die.aiff  index.html
src/flip/: CMakeLists.txt  flip.c  flip.h  flipobj.c  hash.c  hash.h  light.c  light.h  sbinteg.c  swirl.c  vect.c  vect.h
src/gl_puzzle/: CMakeLists.txt  glpuzzle.c  trackball.c
src/ideas/: CMakeLists.txt  objects.h  track.c
src/insect/: CMakeLists.txt  COPYRIGHT  Makefile  README  gl42ogl.c  gl42ogl.h  insect.c  insect.h  insectco.h  mat.c  parts.c
src/iris/: CMakeLists.txt  brick.c  cubetris.c  heat.c
src/libdemo/: CMakeLists.txt  event.c  event.h  trackball.c  trackball.h  ui.c  ui.h  vect.c  vect.h
src/libgobj/: CMakeLists.txt  draw.c  gobj.h  light.c  modify.c  read.c  write.c
src/libtk/: CMakeLists.txt  PORTAGE_NOTES.md  README  cursor.c  event.c  font.c  getset.c  image.c  private.h  shapes.c  tk.h  window.c
src/objviewer/: CMakeLists.txt  objviewer.c
src/porting/: CMakeLists.txt  iris2ogl.c  iris2ogl.h  iris2ogl_missing.c  irix_network.c  irix_network.h
src/roller_coaster/: CMakeLists.txt  rc.c
src/smooth/: CMakeLists.txt  glm.c  smooth.c
src/space/: CMakeLists.txt  COPYRIGHT  Makefile  PORTING_NOTES.md  README  events.c  events_glut.c  fract.c  god.c  image_compat.c  image_compat.h  imlib.c  index.html  input.c  light.c  main.c  main_glut.c  matrix.c  menu.c  objects.c  ringworld.c  sol.h  sols.c  sound.c  space  space.h  space.sh  texture.c  watch.c  world.c
src/space/data/: const.db  corona.ring  df2  index.html  moon3.worp128  moon4.worp128  saturn.ring  star.db  venus.worp256
