file (GLOB SC_SOURCE "*.c")
file (GLOB SC_HEADER "*.h")

if(WIN32)
    add_executable(sgi_bounce WIN32 ${SC_SOURCE} ${SC_HEADER})
    set_target_properties( sgi_bounce PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
else()
    add_executable(sgi_bounce ${SC_SOURCE} ${SC_HEADER})
endif()
if (WIN32)
    target_link_libraries(sgi_bounce OpenGL::GL OpenGL::GLU GLUT::GLUT)
else()
    target_link_libraries(sgi_bounce OpenGL::GL OpenGL::GLU GLUT::GLUT m)
endif()
target_include_directories(sgi_bounce PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
target_compile_options(sgi_bounce PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
target_link_options(sgi_bounce PRIVATE ${OPENGL_LDFLAGS} ${GLUT_LDFLAGS})