file (GLOB SC_SOURCE "*.c")
file (GLOB SC_HEADER "*.h")

# Exclude audio library (not portable)
list(REMOVE_ITEM SC_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/aifflib.c")
list(REMOVE_ITEM SC_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/sound.c")

if(WIN32)
    add_executable(flight ${SC_SOURCE} ${SC_HEADER})
else()
    add_executable(flight ${SC_SOURCE} ${SC_HEADER})
endif()
if (WIN32)
    target_link_libraries(flight OpenGL::GL OpenGL::GLU GLUT::GLUT libgobj porting)
else()
    target_link_libraries(flight OpenGL::GL OpenGL::GLU GLUT::GLUT libgobj m porting)
endif()
target_include_directories(flight PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_options(flight PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
target_link_options(flight PRIVATE ${OPENGL_LDFLAGS} ${GLUT_LDFLAGS})