file (GLOB SC_SOURCE "*.c")
file (GLOB SC_HEADER "*.h")

if(WIN32)
    add_executable(smooth WIN32 ${SC_SOURCE} ${SC_HEADER})
    set_target_properties( smooth PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
else()
    add_executable(smooth ${SC_SOURCE} ${SC_HEADER})
endif()
if (WIN32)
    target_link_libraries(smooth OpenGL::GL OpenGL::GLU $<IF:$<TARGET_EXISTS:FreeGLUT::freeglut>,FreeGLUT::freeglut,FreeGLUT::freeglut_static>)
else()
    target_link_libraries(smooth OpenGL::GL OpenGL::GLU $<IF:$<TARGET_EXISTS:FreeGLUT::freeglut>,FreeGLUT::freeglut,FreeGLUT::freeglut_static> m)
endif()
target_include_directories(smooth PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
target_compile_options(smooth PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
target_link_options(smooth PRIVATE ${OPENGL_LDFLAGS} ${GLUT_LDFLAGS})